syntax ="proto3";
package MeshMsg;


message WrapPubSub{
    string NodeId=1;
    bytes Msg=2;
}